[tool.poetry]
name = "ems-ai-triage"
version = "0.1.0"
description = "EMS AI Triage System"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "0.109.0"
uvicorn = {extras = ["standard"], version = "0.27.0"}
pydantic = "2.6.0"
pandas = "^1.5.0"
numpy = "^1.21.0"
scikit-learn = "^1.1.0"
nltk = "^3.8.0"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
